[package]
name = "smol-examples"
version = "0.1.0"
edition = "2024"

[features]
default = ["phy-tuntap_interface"]
phy-tuntap_interface = ["smoltcp/phy-tuntap_interface"]

[dependencies]
smoltcp = {version = "0.12.0", features = ["phy-tuntap_interface"]}
getopts = "0.2"
log = { version = "0.4.4", default-features = false, optional = true }
url = "2.0"
rand = "0.8"
